--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,13 @@
     justify-content: space-between;
  }
 
+ .task ul li span{
+   cursor: pointer;
+ }
+
  .task ul li i {
     color: gray;
+    cursor: pointer;
  }
 
  .done {
